# cars_com_scrapper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  qulity.yml  test.yml
cars_com_scrapper/: __init__.py  _page_attributes.py  _scrapper.py
mobile_de_scrapper/: scrapper.py
test/: test_srapper.py
